[package]
name = "irox-nmea0183"
description = "NMEA-0183 format Encoders and Decoders for GPS Devices"
keywords = ["irox", "nmea", "encoder", "decoder", "gps"]
categories = ["aerospace", "parser-implementations", "science::geo", "encoding"]
version= "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
irox-structs.workspace = true
irox-enums.workspace = true
irox-tools.workspace = true
irox-carto.workspace = true
irox-units.workspace = true
irox-time.workspace = true
log.workspace = true
