[package]
name = "irox-protobuf"
description = "Implementation of the binary on-wire format of Protobuf"
keywords = ["irox", "protobuf", "encoder", "decoder"]
categories = ["parser-implementations", "encoding"]
version= "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]