[package]
name = "irox-raymarine-sonar"
description = "Raymarine/Navionics Sonar Logs Reader"
keywords = ["irox", "raymarine", "sonar", "encoder", "decoder"]
categories = ["encoding", "parser-implementations"]
version = "0.4.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme = "README.md"
repository.workspace = true

[features]
default = []
cli = ["dep:env_logger", "dep:clap", "dep:clap-verbosity-flag", "dep:irox-gpx"]

[dependencies]
rusqlite.workspace = true
log.workspace = true
miniz_oxide.workspace = true
xml.workspace = true
irox-types.workspace = true
irox-units.workspace = true
irox-carto.workspace = true
irox-tools.workspace = true
irox-time.workspace = true

env_logger = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
clap-verbosity-flag = { workspace = true, optional = true }
irox-gpx = { workspace = true, optional = true }

[[bin]]
name = "sonar_sdf_convert"
required-features = ["cli"]
