[package]
name = "irox-raymarine-sonar"
description = "Raymarine/Navionics Sonar Logs Reader"
keywords = ["irox", "raymarine", "sonar", "encoder", "decoder"]
categories = ["encoding", "parser-implementations"]
version = "0.6.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme = "README.md"
repository.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
miniz_oxide.workspace = true
xml.workspace = true
irox-types.workspace = true
irox-units.workspace = true
irox-carto.workspace = true
irox-tools.workspace = true
irox-bits = { features = ["std"], path = "../../libraries/bits", version = "^0" }
irox-time.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite.workspace = true