[package]
name = "irox-sirf"
description = "SiRF Binary format Encoders and Decoders for GPS Devices"
keywords = ["irox", "sirf", "encoder", "decoder", "gps"]
categories = ["aerospace", "parser-implementations", "science::geo", "encoding"]
version= "0.3.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
irox-structs.workspace = true
irox-tools.workspace = true
log.workspace = true
