[package]
name = "irox-aws"
description = "AWS Interfaces to S3"
keywords = ["irox"]
categories = ["network-programming"]
version= "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
