[package]
name = "irox-gnss"
description = "GNSS Data Stream parsing and detection"
keywords = ["irox", "gps", "gnss"]
categories = ["science::geo", "encoding", "parser-implementations"]
version= "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
irox-bits = {workspace = true, features = ["alloc"]}
irox-tools = {workspace = true, features = ["alloc"]}
irox-nmea0183 = {workspace = true, features = []}
irox-sirf = {workspace = true, features = []}
irox-ubx = {workspace = true, features = []}

irox-log = {workspace = true, features = []}

[features]
default = []
std = ["irox-log/std", "irox-bits/std", "irox-tools/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "tcp"
required-features = ["std"]

[[example]]
name = "ubxdumpfile"
required-features = ["std"]
