[package]
name = "irox-influxdb_v1"
description = "InfluxDB v1 API Client"
keywords = ["irox", "db", "api", "influxdb"]
categories = ["api-bindings", "database"]
version= "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
ureq.workspace = true
url.workspace = true
clap.workspace = true
log.workspace = true
irox-networking.workspace = true
irox-types.workspace = true
irox-csv.workspace = true
env_logger = {workspace = true, optional = true}

[features]
default = ["cli"]
cli = ["dep:env_logger"]

[[bin]]
name = "influx-cli"
required-features = ["cli"]
