[package]
name = "irox-sqlite3"
description = ""
keywords = ["irox"]
categories = []
version= "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bytes = "*"
irox-tools = {workspace = true}