[package]
name = "irox-winlocation-api"
description = "Rust ergonomic adapter for the Windows Devices Location API"
keywords = ["irox", "windows", "api-bindings", "gps", "geospatial"]
categories = ["api-bindings", "science::geo", "aerospace::protocols"]
version= "0.5.3"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
windows.workspace = true
log.workspace = true

irox-carto = { workspace = true, features = ["windows"] }
irox-units.workspace = true
irox-time.workspace = true
